<resources>
    <string name="app_name">Project-2-Instructor</string>

    <string name="SchoolName">Al-Saada High School</string>


    //Login Activity
    <string name="LOGIN">LOGIN</string>
    <string name="USERNAME">UserName </string>
    <string name="PASSWORD">Password </string>

    //Menu
    <string name="HOME_TEXT">Home</string>
    <string name="PERSONAL_PROFILE">Personal Profile</string>
    <string name="About_Us">About Us</string>
    <string name="SETTINGS">Settings</string>
    <string name="LOGOUT">Logout</string>

    //Received Message From Parents
    <string name="RECEIVED_MESSAGE">Received Message : </string>
    <string name="THE_PARENTS_MESSAGES">The parents messages</string>
    <string name="title_activity_absence_students">AbsenceStudents</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="STUDENTS">Students</string>
    <string name="SECTIONS">Sections</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="retry">retry</string>
    <string name="CHECK_STUDENTS">Check Students</string>
    <string name="SHOW_STUDENTS">Show Students</string>

    <string name="SEND">Send</string>
    <string name="ABSENCE">Absence ?</string>
    <string name="CLASS">Class</string>
    <string name="ACCOUNT_INFORMATION">Account Info</string>
    <string name="FULL_NAME">Full Name</string>
    <string name="ATTENDANCE_NUMBER">Attendance Number</string>
    <string name="ABSENCE_NUMCER">Absence Number</string>
    <string name="Age">Age</string>
    <string name="Birth_Date">Birth Date</string>
    <string name="ADD_PRIVATE_NOTE">Add Private Note</string>
    <string name="ADD_ABSENCE_WARNING">Add Absence Warning</string>

    <string name="TITLE">Title </string>
    <string name="ENTER_TITLE">Enter Title</string>
    <string name="ENTER_NOTE">Enter Note</string>
    <string name="RECEIVED_DATE">Received Date : </string>
    <string name="EXPIRED_DATE">Expired Date</string>
    <string name="password">Password</string>
    <string name="username">UserName</string>
</resources>