<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/LemonChiffon"
    android:layout_height="match_parent"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="150sp"

        android:backgroundTint="@color/DarkMagenta"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TITLE"
                    android:textColor="@color/LemonChiffon"
                    android:layout_gravity="start|center"
                    android:textSize="25sp" />


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="250sp"
                    android:layout_height="50sp"
                    android:layout_gravity="start|center"
                    android:paddingStart="20dp"
                    android:paddingEnd="15dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    app:boxStrokeColor="@color/LemonChiffon"
                    android:textColorHint="@color/LemonChiffon"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/Title_note_section"
                        android:textColor="@color/LemonChiffon"
                        android:layout_width="match_parent"
                        android:backgroundTint="@color/LemonChiffon"
                        android:hint="@string/ENTER_TITLE"
                        android:textSize="20sp"
                        android:layout_height="wrap_content"
                        />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:boxStrokeColor="@color/LemonChiffon"
                android:textColorHint="@color/LemonChiffon"
                >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Text_note_section"
                android:textColor="@color/LemonChiffon"
                android:layout_width="match_parent"
                android:backgroundTint="@color/LemonChiffon"
                android:hint="@string/ENTER_NOTE"
                android:layout_height="wrap_content"
                />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        android:orientation="vertical"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/LemonChiffon"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="25sp"
                android:textColor="@color/DarkMagenta"
                android:text="@string/EXPIRED_DATE" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <Spinner
                android:id="@+id/year_notes"
                android:layout_height="50dp"
                android:layout_width="0dp"
                android:layout_weight="1.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
                <Spinner
                    android:id="@+id/month_note"
                    android:layout_height="50dp"
                    android:layout_width="0dp"
                    android:layout_weight="1.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
                <Spinner
                    android:id="@+id/day_note"
                    android:layout_height="50dp"
                    android:layout_width="0dp"
                    android:layout_weight="1.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            </LinearLayout>
        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/send_note_section"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/MediumVioletRed"
            android:text="@string/SEND"
            android:textColor="@color/LemonChiffon"
            app:layout_constraintBottom_toBottomOf="@+id/login_panel_ll_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>